// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectItem /> should render correctly 1`] = `
Array [
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
    >
      <a
        className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
        title="Stratégie technologique de l'Etat et services publics"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX egukdJ"
      >
        <a
          className="sc-bdnxRM Link__LinkInner-jUwnjy cDrLma jnxQhY"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bdnxRM Link__LinkInner-jUwnjy cDrLma jnxQhY"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
      href="https://capco.dev/profile/admin"
    >
      admin
    </a>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS ddZVrU hBLRKx cguwDa"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="public-everybody"
    >
      <p
        className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
      >
        public-everybody
      </p>
    </div>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    2014-12-30 00:00:00
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM egMNHw"
    >
      <button
        aria-controls="id-2"
        aria-expanded={false}
        aria-haspopup="menu"
        className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hmpeDJ"
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
        type="button"
      >
        <IconMock
          className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
        />
      </button>
      <div
        className="sc-bdnxRM dOpKpO Tooltip__TooltipInner-csLBUu bsNXjQ"
        style={
          Object {
            "opacity": 0,
            "transform": "scale(0.8) translateZ(0)",
          }
        }
      >
        <p
          className="sc-bdnxRM cZcArZ"
          title="global.plus"
        >
          global.plus
        </p>
        <div
          className="sc-bdnxRM Tooltip__Arrow-kQwTtI Tooltip___StyledArrow-kwaUKY  eBARRi psaBR"
          data-popper-arrow={true}
          id="arrow"
        />
      </div>
      <div
        aria-orientation="vertical"
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX ieTJLY MenuList__MenuItems-gmUGHY QxsKs"
        data-dialog={true}
        hidden={true}
        id="id-2"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onBlurCapture={[Function]}
        onFocus={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        onKeyUpCapture={[Function]}
        onTransitionEnd={[Function]}
        role="menu"
        style={
          Object {
            "display": "none",
            "left": "100%",
            "opacity": 0,
            "outline": "none",
            "position": "fixed",
            "top": "100%",
          }
        }
        tabIndex={-1}
      >
        <button
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-1"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            action_show
             
          </p>
        </button>
        <button
          aria-controls="id-3"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-2"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
          type="button"
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            project.download.button
             
          </p>
        </button>
        <div
          aria-label="delete-confirmation"
          aria-modal={true}
          data-dialog={true}
          hidden={true}
          id="id-3"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
        />
        <button
          aria-controls="id-4"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-3"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
          type="button"
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            admin.global.delete
             
          </p>
        </button>
        <div
          aria-label="delete-confirmation"
          aria-modal={true}
          data-dialog={true}
          hidden={true}
          id="id-4"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
        />
      </div>
    </div>
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without authors 1`] = `
Array [
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
    >
      <a
        className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
        title="Stratégie technologique de l'Etat et services publics"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX egukdJ"
      >
        <a
          className="sc-bdnxRM Link__LinkInner-jUwnjy cDrLma jnxQhY"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bdnxRM Link__LinkInner-jUwnjy cDrLma jnxQhY"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    -
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS ddZVrU hBLRKx cguwDa"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="public-everybody"
    >
      <p
        className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
      >
        public-everybody
      </p>
    </div>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    2014-12-30 00:00:00
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM egMNHw"
    >
      <button
        aria-controls="id-2"
        aria-expanded={false}
        aria-haspopup="menu"
        className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hmpeDJ"
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
        type="button"
      >
        <IconMock
          className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
        />
      </button>
      <div
        className="sc-bdnxRM dOpKpO Tooltip__TooltipInner-csLBUu bsNXjQ"
        style={
          Object {
            "opacity": 0,
            "transform": "scale(0.8) translateZ(0)",
          }
        }
      >
        <p
          className="sc-bdnxRM cZcArZ"
          title="global.plus"
        >
          global.plus
        </p>
        <div
          className="sc-bdnxRM Tooltip__Arrow-kQwTtI Tooltip___StyledArrow-kwaUKY  eBARRi psaBR"
          data-popper-arrow={true}
          id="arrow"
        />
      </div>
      <div
        aria-orientation="vertical"
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX ieTJLY MenuList__MenuItems-gmUGHY QxsKs"
        data-dialog={true}
        hidden={true}
        id="id-2"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onBlurCapture={[Function]}
        onFocus={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        onKeyUpCapture={[Function]}
        onTransitionEnd={[Function]}
        role="menu"
        style={
          Object {
            "display": "none",
            "left": "100%",
            "opacity": 0,
            "outline": "none",
            "position": "fixed",
            "top": "100%",
          }
        }
        tabIndex={-1}
      >
        <button
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-1"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            action_show
             
          </p>
        </button>
        <button
          aria-controls="id-3"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-2"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
          type="button"
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            project.download.button
             
          </p>
        </button>
        <div
          aria-label="delete-confirmation"
          aria-modal={true}
          data-dialog={true}
          hidden={true}
          id="id-3"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
        />
        <button
          aria-controls="id-4"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-3"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
          type="button"
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            admin.global.delete
             
          </p>
        </button>
        <div
          aria-label="delete-confirmation"
          aria-modal={true}
          data-dialog={true}
          hidden={true}
          id="id-4"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
        />
      </div>
    </div>
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without exportable steps 1`] = `
Array [
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
    >
      <a
        className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
        title="Stratégie technologique de l'Etat et services publics"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX egukdJ"
      >
        <a
          className="sc-bdnxRM Link__LinkInner-jUwnjy cDrLma jnxQhY"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bdnxRM Link__LinkInner-jUwnjy cDrLma jnxQhY"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
      href="https://capco.dev/profile/admin"
    >
      admin
    </a>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS ddZVrU hBLRKx cguwDa"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="public-everybody"
    >
      <p
        className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
      >
        public-everybody
      </p>
    </div>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    2014-12-30 00:00:00
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM egMNHw"
    >
      <button
        aria-controls="id-2"
        aria-expanded={false}
        aria-haspopup="menu"
        className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hmpeDJ"
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
        type="button"
      >
        <IconMock
          className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
        />
      </button>
      <div
        className="sc-bdnxRM dOpKpO Tooltip__TooltipInner-csLBUu bsNXjQ"
        style={
          Object {
            "opacity": 0,
            "transform": "scale(0.8) translateZ(0)",
          }
        }
      >
        <p
          className="sc-bdnxRM cZcArZ"
          title="global.plus"
        >
          global.plus
        </p>
        <div
          className="sc-bdnxRM Tooltip__Arrow-kQwTtI Tooltip___StyledArrow-kwaUKY  eBARRi psaBR"
          data-popper-arrow={true}
          id="arrow"
        />
      </div>
      <div
        aria-orientation="vertical"
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX ieTJLY MenuList__MenuItems-gmUGHY QxsKs"
        data-dialog={true}
        hidden={true}
        id="id-2"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onBlurCapture={[Function]}
        onFocus={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        onKeyUpCapture={[Function]}
        onTransitionEnd={[Function]}
        role="menu"
        style={
          Object {
            "display": "none",
            "left": "100%",
            "opacity": 0,
            "outline": "none",
            "position": "fixed",
            "top": "100%",
          }
        }
        tabIndex={-1}
      >
        <button
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-1"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            action_show
             
          </p>
        </button>
        <button
          aria-controls="id-3"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-2"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
          type="button"
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            admin.global.delete
             
          </p>
        </button>
        <div
          aria-label="delete-confirmation"
          aria-modal={true}
          data-dialog={true}
          hidden={true}
          id="id-3"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
        />
      </div>
    </div>
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without themes 1`] = `
Array [
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM Flex___StyledAppBox-RSPpX bHyrFO"
    >
      <a
        className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
        title="Stratégie technologique de l'Etat et services publics"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX egukdJ"
      />
    </div>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bdnxRM Link__LinkInner-jUwnjy  jnxQhY"
      href="https://capco.dev/profile/admin"
    >
      admin
    </a>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM Tag__TagInner-bjwVBq Tag___StyledTagInner-cdSrrS ddZVrU hBLRKx cguwDa"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="public-everybody"
    >
      <p
        className="sc-bdnxRM ffkNxr Tag___StyledText-hGgPZv bchNbO"
      >
        public-everybody
      </p>
    </div>
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    2014-12-30 00:00:00
  </td>,
  <td
    className="sc-bdnxRM Td___StyledAppBox-cCsKUs gnlIxl crfCBn"
    style={
      Object {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bdnxRM egMNHw"
    >
      <button
        aria-controls="id-2"
        aria-expanded={false}
        aria-haspopup="menu"
        className="sc-bdnxRM Button__ButtonInner-dWPVNG kSiBKu jfKDDI ButtonQuickAction___StyledButton-flKodz hmpeDJ"
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
        type="button"
      >
        <IconMock
          className="sc-bdnxRM Icon__IconInner-dsjTlW Icon___StyledIconInner-cEPYKG iBxOux fZkSKg AMDLx icon"
        />
      </button>
      <div
        className="sc-bdnxRM dOpKpO Tooltip__TooltipInner-csLBUu bsNXjQ"
        style={
          Object {
            "opacity": 0,
            "transform": "scale(0.8) translateZ(0)",
          }
        }
      >
        <p
          className="sc-bdnxRM cZcArZ"
          title="global.plus"
        >
          global.plus
        </p>
        <div
          className="sc-bdnxRM Tooltip__Arrow-kQwTtI Tooltip___StyledArrow-kwaUKY  eBARRi psaBR"
          data-popper-arrow={true}
          id="arrow"
        />
      </div>
      <div
        aria-orientation="vertical"
        className="sc-bdnxRM Flex___StyledAppBox-RSPpX ieTJLY MenuList__MenuItems-gmUGHY QxsKs"
        data-dialog={true}
        hidden={true}
        id="id-2"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onBlurCapture={[Function]}
        onFocus={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        onKeyUpCapture={[Function]}
        onTransitionEnd={[Function]}
        role="menu"
        style={
          Object {
            "display": "none",
            "left": "100%",
            "opacity": 0,
            "outline": "none",
            "position": "fixed",
            "top": "100%",
          }
        }
        tabIndex={-1}
      >
        <button
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-1"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            action_show
             
          </p>
        </button>
        <button
          aria-controls="id-3"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-2"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
          type="button"
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            project.download.button
             
          </p>
        </button>
        <div
          aria-label="delete-confirmation"
          aria-modal={true}
          data-dialog={true}
          hidden={true}
          id="id-3"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
        />
        <button
          aria-controls="id-4"
          aria-expanded={false}
          aria-haspopup="dialog"
          className="MenuListItem__MenuItemInner-gIqqDA kvUUcb"
          id="id-2-3"
          onBlurCapture={[Function]}
          onClick={[Function]}
          onClickCapture={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPressCapture={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseDownCapture={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          role="menuitem"
          tabIndex={0}
          type="button"
        >
          <p
            className="sc-bdnxRM isZYbz"
          >
             
            admin.global.delete
             
          </p>
        </button>
        <div
          aria-label="delete-confirmation"
          aria-modal={true}
          data-dialog={true}
          hidden={true}
          id="id-4"
          onAnimationEnd={[Function]}
          onBlur={[Function]}
          onKeyDown={[Function]}
          onTransitionEnd={[Function]}
          role="dialog"
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
        />
      </div>
    </div>
  </td>,
]
`;
